<resources>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="app_name">CampLec</string>
    <string name="register_app_name">Enjoy reading in CampLec</string>
    <string name="register_title">Register</string>
    <string name="register_input_hint_fullName">Full Name</string>
    <string name="register_fullName_input_content_description_end_icon">FullName</string>
    <string name="register_fullName_input_hint">Full Name</string>
    <string name="register_nickname_input_hint">Nickname</string>
    <string name="register_nickname_input_content_description_end_icon">Nickname</string>
    <string name="register_phoneNumber_input_hint">Phone Number</string>
    <string name="register_phoneNumber_input_content_description_end_icon">Phone Number</string>
    <string name="register_password_input_hint">Password</string>
    <string name="register_password_input_content_description_end_icon">Password</string>
    <string name="login_title">Login</string>


</resources>